Starting point for "Structuring a Basic Card"

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tailwindtutorual",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
